<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.location.LocationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Localização"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:overScrollMode="never"
        android:scrollbars="none">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:lineSpacingExtra="2dp"
                android:padding="16dp"
                android:text="@string/location_deny"
                android:textColor="@color/text_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <requestFocus/>
            </android.support.v7.widget.AppCompatTextView>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawableLeft="@drawable/ic_map"
                android:drawablePadding="8dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/location_use_location"
                android:textColor="@color/text_dark"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title"/>

            <View
                android:id="@+id/divider"
                style="@style/DividerStyle"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/text_map"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:hint="@string/location_address_hint"
                android:imeOptions="actionSearch"
                android:lines="1"
                android:padding="16dp"
                android:singleLine="true"
                android:textColor="@color/text_dark"
                android:textColorHint="@color/text_dark"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_map"/>

            <ProgressBar
                android:id="@+id/progress_search"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/input_search"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_search"
                tools:visibility="visible"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_search"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone"
        tools:visibility="visible">

        <FrameLayout
            android:id="@+id/container_fragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/text_map_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_map"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_map_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/text_map_location"
            app:layout_constraintTop_toTopOf="@+id/text_map_location"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_map_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/location_waiting"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_confirm_location"
            app:layout_constraintLeft_toRightOf="@+id/progress_map"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_confirm_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/background_button_confirm_location"
            android:enabled="false"
            android:text="@string/location_confirm"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</merge>